; ModuleID = '/home/carl/AnghaBench/git/extr_progress.c_display_progress.c'
source_filename = "/home/carl/AnghaBench/git/extr_progress.c_display_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.progress = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @display_progress(%struct.progress* %0, i32 %1) #0 {
  %3 = alloca %struct.progress*, align 8
  %4 = alloca i32, align 4
  store %struct.progress* %0, %struct.progress** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.progress*, %struct.progress** %3, align 8
  %6 = icmp ne %struct.progress* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load %struct.progress*, %struct.progress** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @display(%struct.progress* %8, i32 %9, i32* null)
  br label %11

11:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @display(%struct.progress*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
